--- a/compose.yaml
+++ b/compose.yaml
@@ -18,7 +18,7 @@ services:
       - bittan-marke-server
       - bittan-fysikalen-server
       - fnkth.se-flask
-      - valkompassen
+        # - valkompassen
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
 
@@ -367,16 +367,16 @@ services:
     restart: always
 
   # valkompassen
-  valkompassen:
-    container_name: valkompassen
-    image: ghcr.io/fysiksektionen/valkompass-2025-backend:${VALKOMPASSEN_VERSION}
-    deploy:
-      resources:
-        limits:
-          cpus: '0.15'
-    env_file: ./services/valkompassen/.env
-    environment:
-      HOST: 0.0.0.0
-      SUBPATH: "/valkompassen"
-      PORT: 5000
-      DEBUG: false
+  # valkompassen:
+  #   container_name: valkompassen
+  #   image: ghcr.io/fysiksektionen/valkompass-2025-backend:${VALKOMPASSEN_VERSION}
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         cpus: '0.15'
+  #   env_file: ./services/valkompassen/.env
+  #   environment:
+  #     HOST: 0.0.0.0
+  #     SUBPATH: "/valkompassen"
+  #     PORT: 5000
+  #     DEBUG: false
