--- a/nginx.conf
+++ b/nginx.conf
@@ -82,12 +82,12 @@ http {
         }
 
         # valkompassen
-        location /valkompassen/ {
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $http_host;
-            proxy_redirect off;
-            proxy_pass http://valkompassen:5000/valkompassen/;
-        }
+	# location /valkompassen/ {
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header Host $http_host;
+        #     proxy_redirect off;
+        #     proxy_pass http://valkompassen:5000/valkompassen/;
+        # }
 
         # Wordpress options. DO NOT CHANGE
         location / {
